SCSS Fixed c-menu overflow, removed c-services margin

--- a/app/src/scss/components/c-menu.scss
+++ b/app/src/scss/components/c-menu.scss
@@ -33,6 +33,8 @@
     right: 0;
     z-index: 1000;
 
+    overflow: scroll;
+
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -51,6 +53,7 @@
 
   &__list {
     margin-top: 0;
+    margin-bottom: 2em;
     padding-left: 0;
 
     list-style-type: none;
