--- a/app/src/scss/components/c-services.scss
+++ b/app/src/scss/components/c-services.scss
@@ -2,6 +2,9 @@
   list-style-type: none;
   padding-left: 0;
 
+  margin-top: 0;
+  margin-bottom: 0;
+
   li:not(:first-child) {
     margin-top: .25em;
   }
